rapport.txt
bonus/draw_ceil_and_floor.c: In function ‘draw_ceil_and_floor_tex’:
bonus/draw_ceil_and_floor.c:160:30: error: incompatible types when initializing type ‘__m256i’ using type ‘__m128i’
  160 |                 __m256i mx = _mm256_cvttpd_epi32(fx);
      |                              ^~~~~~~~~~~~~~~~~~~
bonus/draw_ceil_and_floor.c:161:30: error: incompatible types when initializing type ‘__m256i’ using type ‘__m128i’
  161 |                 __m256i my = _mm256_cvttpd_epi32(fy);
      |                              ^~~~~~~~~~~~~~~~~~~
bonus/draw_ceil_and_floor.c:163:53: error: incompatible type for argument 1 of ‘_mm256_cvtepi32_pd’
  163 |                 __m256d fx_int = _mm256_cvtepi32_pd(mx);
      |                                                     ^~
      |                                                     |
      |                                                     __m256i
In file included from /usr/lib/gcc/x86_64-linux-gnu/13/include/immintrin.h:43,
                 from bonus/draw_ceil_and_floor.c:129:
/usr/lib/gcc/x86_64-linux-gnu/13/include/avxintrin.h:455:29: note: expected ‘__m128i’ but argument is of type ‘__m256i’
  455 | _mm256_cvtepi32_pd (__m128i __A)
      |                     ~~~~~~~~^~~
bonus/draw_ceil_and_floor.c:164:53: error: incompatible type for argument 1 of ‘_mm256_cvtepi32_pd’
  164 |                 __m256d fy_int = _mm256_cvtepi32_pd(my);
      |                                                     ^~
      |                                                     |
      |                                                     __m256i
/usr/lib/gcc/x86_64-linux-gnu/13/include/avxintrin.h:455:29: note: expected ‘__m128i’ but argument is of type ‘__m256i’
  455 | _mm256_cvtepi32_pd (__m128i __A)
      |                     ~~~~~~~~^~~
make: *** [Makefile:102: objs_bonus//draw_ceil_and_floor.o] Error 1
